# m1-spatialsystem

./: .gitattributes  .gitignore  .gitmodules  Makefile  Makefile.variables  Makefile.variables.example  README.md
.github/scripts/: init-submodules.sh
.github/workflows/: release.yml  update-docs.yml
installer/: build_mach1spatialsystem_osx.sh  build_mach1spatialsystem_win.bat  generate_version.sh  intro.rtf  summary.rtf
installer/License/: Mach1-SpatialSystem-EULA.docx  license.rtf
installer/osx/: Mach1 Spatial System Installer.pkgproj  macos_utilities.sh  om_bootstrap.sh  postinstall_transcoder.sh  preinstall_aaxplugin.sh  preinstall_au.sh  preinstall_player.sh  preinstall_services.sh  preinstall_vst.sh  preinstall_vst3.sh  uninstaller.sh  v1_uninstaller.sh  v2_uninstaller.sh  validate_aax_plugins.py  version_cleanup.sh  videoplayer_cleanup.sh
installer/resources/: settings.json
installer/resources/docs/: Mach1-Monitor.pages  Mach1-Panner.pages  Mach1-Transcoder.pages  Mach1-UserGuide.pages  README.md  build-docs.js  cloudfront-function.js  index.html
installer/resources/docs/content/: guide.html  monitor.html  orientation.html  panner.html  player.html  transcoder.html
installer/resources/docs/css/: styles.css
installer/resources/docs/js/: main.js  print.js  search.js  state-manager.js
installer/resources/docs/templates/: base.html  content-placeholders.html  sidebar.html
installer/resources/templates/Nuendo/: Mach1 Spatial Template.npr
installer/resources/templates/Nuendo/qa/: README.md  test_nuendo_session.sh  validate_audio.py
installer/resources/templates/PTHD/: M1HorizonPairs-Template.ptx  Mach1 Spatial Reverb Addon.ptxt  Mach1 Spatial Template.ptxt  Mach1 Spatial To Horizon Addon.ptxt
installer/resources/templates/Reaper/: Mach1 Spatial Template.RPP
installer/win/: aax-signtool.bat  aax-signtool.py  download_ffmpeg.bat  installer.iss  om_bootstrap.bat  player_setup.bat  postinstall_transcoder.bat  service_setup.bat  service_stopper.bat  service_uninstall.bat  sign-file.ps1  version_cleanup.bat
services/M1-SystemWatcher/: CMakeLists.txt  M1-SystemWatcher.jucer  README.md  com.mach1.watcher.plist
services/M1-SystemWatcher/Source/: Main.cpp
services/m1-proxy-server/: .gitignore  Makefile  README.md  app.js  package-lock.json  package.json
services/m1-system-helper/: CMakeLists.txt  Info.plist  README.md  VERSION  com.mach1.spatial.helper.plist  entitlements.mac.plist  m1-system-helper.jucer
services/m1-system-helper/Resources/: README.md
services/m1-system-helper/Resources/linux/: install.sh  m1-system-helper.service  m1-system-helper.socket
services/m1-system-helper/Resources/macos/: Info.plist  com.mach1.spatial.helper.plist  entitlements.mac.plist
services/m1-system-helper/Resources/windows/: m1-system-helper.bat
services/m1-system-helper/Source/: CMakeLists.txt  M1SystemHelperService.cpp  M1SystemHelperService.h  Main.cpp
services/m1-system-helper/Source/Common/: Common.h  M1MemoryShare.cpp  M1MemoryShare.h  M1SystemHelperManager.cpp  M1SystemHelperManager.h  ServiceLocator.h  SharedPathUtils.cpp  SharedPathUtils.h  SharedPathUtils.mm  TypesForDataExchange.h
services/m1-system-helper/Source/Core/: AudioStreaming.cpp  AudioStreaming.h  CaptureEngine.cpp  CaptureEngine.h  ConfigManager.cpp  ConfigManager.h  CoverageModel.cpp  CoverageModel.h  EventSystem.h  ExternalMixerProcessor.cpp  ExternalMixerProcessor.h
services/m1-system-helper/Source/Managers/: ClientManager.cpp  ClientManager.h  M1MemoryShareTracker.cpp  M1MemoryShareTracker.h  OSCPannerTracker.cpp  OSCPannerTracker.h  PannerTrackingManager.cpp  PannerTrackingManager.h  PluginManager.cpp  PluginManager.h  ProcessManager.cpp  ProcessManager.h  ServiceManager.cpp  ServiceManager.h
services/m1-system-helper/Source/Network/: OSCHandler.cpp  OSCHandler.h
services/m1-system-helper/Source/UI/: SessionUI.cpp  SessionUI.h
services/m1-system-helper/Source/UI/Components/: CaptureTimelinePanel.cpp  CaptureTimelinePanel.h  FlatButtonLookAndFeel.h  InputMixerComponent.cpp  InputMixerComponent.h  InputPanelContainer.cpp  InputPanelContainer.h  InputTracklistComponent.cpp  InputTracklistComponent.h  M1SpatialOutComponent.cpp  M1SpatialOutComponent.h  MonitorPanel.cpp  MonitorPanel.h  Panner3DViewPanel.cpp  Panner3DViewPanel.h  SoundfieldDisplayComponent.cpp  SoundfieldDisplayComponent.h  TimelineComponent.cpp  TimelineComponent.h
services/m1-system-helper/Tests/: read_memory_share  read_memory_share.cpp  test_memory_share.sh
services/m1-watcher/: CMakeLists.txt  Info.plist  M1-SystemWatcher.jucer  README.md  com.mach1.spatial.watcher.plist  m1-systemwatcher.jucer
services/m1-watcher/Source/: Main.cpp
